Bug 525463 - AIX Port Seamonkey 2.0: macro redefinition in mailnews/base/src/nsMsgAccountManager.cpp; removing duplicate definitions from nsCRTGlue.h. r+sr=bienvenu.